# Ray-TriangleIntersection

./: CMakeLists.txt  Camera.h  Math.cpp  Math.h  OBJ_Loader.h  Object.cpp  Object.h  OpenGL.cpp  OpenGL.h  Shader.h  main.cpp
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/loader/include/: OBJ_Loader.h
shaders/: blueShader.fs  defaultShader.fs  defaultShader.vs
